--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -67,6 +67,10 @@
     font-size: 0;
     line-height: 0;
     margin-left: 75px;
+
+    @include screen('lg') {
+      margin-left: 58px;
+    }
   }
 
   &.is-login {
