--- a/app/components/ui-kit/ui-kit.scss
+++ b/app/components/ui-kit/ui-kit.scss
@@ -242,4 +242,12 @@ $ui-kit-color-darkbg: #111;
       margin-bottom: 10px;
     }
   }
+
+  .grid {
+
+    &__col.is-dark {
+      background-color: $ui-kit-color-darkbg;
+      color: white;
+    }
+  }
 }
