--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -59,6 +59,10 @@ $color-meeting-room: $color-blue;
 $color-office-space: $color-green;
 $color-heart: #e8502d;
 $color-gray-darkest: #1d2120;
+$color-select-bg: #1c2026;
+$color-select-bg-light: #fbfbfb;
+$color-inner-border: #707272;
+
 // ##########
 // Transitions
 // ##########
