--- a/app/blocks/form-elements/form-elements.pug
+++ b/app/blocks/form-elements/form-elements.pug
@@ -35,6 +35,12 @@ mixin radio(name, value, checked)
     +e.SPAN.content
       block
 
+mixin color-radio(name, value, checked)
+  +b.LABEL.color-radio&attributes(attributes)
+    +e.INPUT.input(name=name, value=value, type="radio")
+    +e.SPAN.content
+      block
+
 mixin range()
   +b.range&attributes(attributes).js-range
     block
