--- a/app/components/condition-search/condition-search.scss
+++ b/app/components/condition-search/condition-search.scss
@@ -1,3 +1,187 @@
 .condition-search {
   $b: &;
+
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 12px;
+
+  @include screen('xl') {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  &__head {
+    text-align: right;
+
+    @include screen('xl') {
+      width: 100%;
+      text-align: left;
+      margin-bottom: 30px;
+    }
+
+    @include screen('lg') {
+      margin-bottom: 44px;
+    }
+
+    @include screen('sm') {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__title {
+    @include text-mid;
+
+    line-height: (26/17);
+    font-weight: 700;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-right: 37px;
+
+    @include screen('lg') {
+      @include heading-4;
+
+      line-height: (26/20);
+    }
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: (26/15);
+    }
+  }
+
+  &__form {
+    display: block;
+
+    @include screen('xl') {
+      width: 100%;
+      max-width: 540px;
+    }
+
+    @include screen('lg') {
+      max-width: 585px;
+    }
+
+    @include screen('sm') {
+      max-width: none;
+    }
+  }
+
+  &__top {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    box-sizing: border-box;
+    padding-right: 8px;
+    margin-bottom: 38px;
+
+    @include screen('xl') {
+      padding-right: 14px;
+      justify-content: space-between;
+      margin: 0 -7px 38px;
+    }
+
+    @include screen('lg') {
+      padding-left: 2px;
+      padding-right: 2px;
+    }
+  }
+
+  &__radio {
+    &:not(:first-child) {
+      margin-left: 32px;
+
+      @include screen('lg') {
+        margin-left: 0;
+      }
+    }
+  }
+
+  &__selects {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex: 1;
+    margin-top: -26px;
+    margin-bottom: 10px;
+
+    @include screen('sm') {
+      flex: none;
+      width: 100%;
+      flex-wrap: wrap;
+      margin-bottom: 36px;
+    }
+  }
+
+  &__select {
+    width: 140px;
+    min-width: 140px;
+    margin-top: 26px;
+
+    @include screen('sm') {
+      width: 100%;
+    }
+
+    &:not(:last-child) {
+      margin-right: 28px;
+
+      @include screen('sm') {
+        margin-right: 0;
+      }
+    }
+
+    &_wide {
+      width: auto;
+      flex: 1;
+
+      @include screen('sm') {
+        flex: none;
+        width: 100%;
+      }
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    box-sizing: border-box;
+    padding-right: 4px;
+
+    @include screen('xl') {
+      margin: 0 -7px;
+      padding-right: 9px;
+    }
+
+    @include screen('sm') {
+      flex-wrap: wrap;
+      padding-right: 0;
+    }
+  }
+
+  &__buttons {
+    margin-left: 19px;
+
+    @include screen('lg') {
+      margin-left: 30px;
+    }
+
+    @include screen('sm') {
+      margin-left: 0;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 0 7px;
+    }
+  }
+
+  &__button {
+
+    .button__text {
+      padding-left: 55px;
+      padding-right: 55px;
+      min-width: 143px;
+    }
+  }
 }
