--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -246,19 +246,57 @@ block content
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
-              +col(3)
+              +col(3).is-dark
                 +ui-description .js-select-light
                 +select.js-select-light
+                  option(value="placeholder" placeholder) Placeholder
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
               +col(3)
                 +ui-description .js-select-dark
                 +select.js-select-dark
+                  option(value="placeholder" placeholder) Placeholder
                   option(value="Опция 1") Опция 1
                   option(value="Опция 2") Опция 2
                   option(value="Опция 3") Опция 3
+              +col(3).is-dark
+                +ui-description .js-select-color
+                +select.js-select-color
+                  option(value="placeholder" placeholder) Placeholder
+                  option(value="Опция 1") Опция 1
+                  option(value="Опция 2") Опция 2
+                  option(value="Опция 3") Опция 3
+          +col(12).is-dark
+            +ui-description Цветные радиокнопки
+            +grid
               +col(3)
+                +ui-description .color-radio._orange
+                +color-radio('test-color', '1')._orange Hot Desk
+              +col(3)
+                +ui-description .color-radio._red
+                +color-radio('test-color', '2')._red Dedicated Desk
+              +col(3)
+                +ui-description .color-radio._blue
+                +color-radio('test-color', '3')._blue Meeting Room
+              +col(3)
+                +ui-description .color-radio._green
+                +color-radio('test-color', '4')._green Office Space
+          +col(12)
+            +ui-description Цветные радиокнопки темные
+            +grid
+              +col(3)
+                +ui-description .color-radio._orange._dark
+                +color-radio('test-color', '1')._orange._dark Hot Desk
+              +col(3)
+                +ui-description .color-radio._red._dark
+                +color-radio('test-color', '2')._red._dark Dedicated Desk
+              +col(3)
+                +ui-description .color-radio._blue._dark
+                +color-radio('test-color', '3')._blue._dark Meeting Room
+              +col(3)
+                +ui-description .color-radio._green._dark
+                +color-radio('test-color', '4')._green._dark Office Space
 
     //-Табы
     +ui-section
