--- a/app/components/condition-search/condition-search.scss
+++ b/app/components/condition-search/condition-search.scss
@@ -14,8 +14,10 @@
 
   &__head {
     text-align: right;
+    min-width: 244px;
 
     @include screen('xl') {
+      min-width: 0;
       width: 100%;
       text-align: left;
       margin-bottom: 30px;
