--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -34,4 +34,4 @@ mixin filter()
           option(value="dddsk") Dedicated Desk
           option(value="room") Meeting Room
           option(value="space") Office Space
-    +filter-reset(data-target-slot="location-clear" data-target-filter="location-filter-big")
+    +filter-reset.__reset.hide-sm(data-target-slot="location-clear" data-target-filter="location-filter-big")
