--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -62,6 +62,7 @@ $color-gray-darkest: #1d2120;
 $color-select-bg: #1c2026;
 $color-select-bg-light: #fbfbfb;
 $color-inner-border: #707272;
+$color-selected-dark: #131716;
 
 // ##########
 // Transitions
