--- a/app/blocks/news/news.scss
+++ b/app/blocks/news/news.scss
@@ -20,7 +20,7 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
 
       @include screen('lg') {
         margin-bottom: 17px;
@@ -51,7 +51,11 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 6px;
+      margin-bottom: 8px;
+
+      @include screen('lg') {
+        margin-bottom: 6px;
+      }
 
       @include screen('sm') {
         margin-bottom: 12px;
