--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -1,3 +1,42 @@
 .filter {
   $b: &;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  &__form {
+    flex: 1;
+
+    @include screen('lg') {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  &__wrapper {
+    display: inline-block;
+
+    &:not(:last-child) {
+      margin-right: 46px;
+
+      @include screen('lg') {
+        margin-right: 10px;
+      }
+    }
+
+    &:first-child {
+      margin-right: 40px;
+
+      @include screen('lg') {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  &__reset {
+    white-space: nowrap;
+    margin-left: 50px;
+  }
 }
