--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -137,6 +137,10 @@
     display: flex;
     align-items: center;
 
+    @include screen('lg') {
+      padding-right: 4px;
+    }
+
     .link {
       @include text16;
 
