--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -35,7 +35,7 @@ block content
         +e.header-content
           +e.location-top(data-slot-id="location-clear" data-slot-res="lg")
             +section-title('h2') Locations
-          //- +e.location-bottom
+          +e.location-bottom
             +filter.hide-sm(data-slot-id="location-clear" data-slot-res="xl")
             +compact-filter.hide-from-sm
       +section-content
