--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -16,5 +16,6 @@ html(lang='en')
     +overlay
     +main-menu
     +footer
+    script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
