--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -9,6 +9,6 @@ mixin space(data)
       if data.boxes
         +boxes.__boxes
           each item in data.boxes
-            +box(class=item.class)
+            +box(class='_small ' + item.class)
       +e.title!= data.title
       +e.location!= data.location
