--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,5 +1,6 @@
 include ../blocks/accordion/accordion
 include ../blocks/avatar/avatar
+include ../blocks/box/box
 include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/burger/burger
@@ -10,6 +11,8 @@ include ../blocks/content-zone/content-zone
 include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facil-list/facil-list
+include ../blocks/filter-list/filter-list
+include ../blocks/filter-name/filter-name
 include ../blocks/filter-reset/filter-reset
 include ../blocks/form-elements/form-elements
 include ../blocks/grid/grid
