--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -63,6 +63,7 @@ $color-select-bg: #1c2026;
 $color-select-bg-light: #fbfbfb;
 $color-inner-border: #707272;
 $color-selected-dark: #131716;
+$color-form-border-dark: #232931;
 
 // ##########
 // Transitions
