--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -24,10 +24,17 @@
 }
 
 .checkradio {
+  $radio: &;
+
   position: relative;
-  padding-left: 25px;
+  padding-left: 33px;
   display: inline-block;
   cursor: pointer;
+
+  &.is-disabled {
+    cursor: default;
+    pointer-events: none;
+  }
 
   &__input {
     position: absolute;
@@ -41,28 +48,40 @@
 
     &:checked {
 
-      &+.checkradio__box {
+      &+#{$radio}__box {
+        background-color: $color-basic;
+        border-color: $color-form-border-dark;
+
         &::before {
           opacity: 1;
         }
+      }
+    }
+
+    &:disabled {
+
+      &+#{$radio}__box {
+        opacity: .51;
       }
     }
   }
 
   &__box {
     position: absolute;
-    width: 15px;
-    height: 15px;
-    border: 1px solid $color-border;
+    width: 20px;
+    height: 20px;
+    border: 1px solid $color-form-border;
     left: 0;
-    top: 2px;
+    top: 50%;
     border-radius: 50%;
+    transform: translate3d(0, -50%, 0);
+    transition: border $ease-main, background $ease-main, opacity $ease-main;
 
     &::before {
       content: '';
-      width: 15px;
-      height: 15px;
-      background-color: $color-basic;
+      width: 10px;
+      height: 10px;
+      background-color: $color-white;
       display: block;
       opacity: 0;
       transition: opacity $ease-main;
@@ -70,25 +89,163 @@
 
       @include center-image;
     }
+
+    #{$radio}:hover & {
+      border-color: $color-form-border-dark;
+      background-color: $color-basic;
+    }
+
+    #{$radio}.is-disabled & {
+      opacity: .51;
+    }
   }
 
   &__content {
-    @include text;
+    @include text-big;
+
+    color: $color-basic;
+  }
+
+  &_nobox {
+    padding-left: 0;
+
+    #{$radio}__input {
+      &:checked {
+
+        &~#{$radio}__content {
+          color: $color-basic-dark;
+        }
+      }
+    }
+
+    #{$radio}__box {
+      display: none;
+    }
+
+    #{$radio}__content {
+      transition: color $ease-main;
+    }
+
+    &:hover {
+      #{$radio}__content {
+        color: $color-basic-dark;
+      }
+    }
   }
 }
 
-.checkradio_checkbox {
+.checkbox {
+  $check: &;
+
   position: relative;
-  padding-left: 25px;
+  padding-left: 33px;
   display: inline-block;
   cursor: pointer;
 
-  .checkradio__box {
-    border-radius: 0;
+  &.is-disabled {
+    cursor: default;
+    pointer-events: none;
+  }
 
-    &::before {
-      content: '';
-      border-radius: 0;
+  &__input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+
+    &:checked {
+
+      &+#{$check}__box {
+        background-color: $color-basic;
+        border-color: $color-form-border-dark;
+
+        #{$check}__icon {
+          opacity: 1;
+        }
+      }
+    }
+
+    &:disabled {
+
+      &+#{$check}__box {
+        opacity: .51;
+      }
+    }
+  }
+
+  &__box {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 1px solid $color-form-border;
+    left: 0;
+    top: 50%;
+    border-radius: 0;
+    transform: translate3d(0, -50%, 0);
+    transition: border $ease-main, background $ease-main, opacity $ease-main;
+
+    #{$check}:hover & {
+      border-color: $color-form-border-dark;
+      background-color: $color-basic;
+    }
+
+    #{$check}.is-disabled & {
+      opacity: .51;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    font-size: 0;
+    line-height: 0;
+    width: 14px;
+    height: 12px;
+    fill: $color-white;
+    opacity: 0;
+    transition: opacity $ease-main;
+  }
+
+  &__content {
+    @include text-big;
+
+    color: $color-basic;
+  }
+
+  &_small {
+    padding-left: 28px;
+
+    #{$check}__box {
+      width: 15px;
+      height: 15px;
+    }
+
+    #{$check}__icon {
+      width: 12px;
+      height: 10px;
+      top: 1px;
+      left: 2px;
+    }
+
+    #{$check}__content {
+      @include text12;
+
+      line-height: (30/12);
+    }
+  }
+
+  &_inverse {
+    padding-left: 0;
+    padding-right: 28px;
+
+    #{$check}__box {
+      left: auto;
+      right: 0;
     }
   }
 }
@@ -498,8 +655,9 @@
         max-width: none;
         background-color: rgba($color-select-bg, .32);
         border: 2px solid $color-white;
+        border-top-width: 1px;
         border-radius: 0 0 3px 3px;
-        margin-top: -2px;
+        margin-top: -1px;
         max-height: 118px;
         box-sizing: border-box;
         padding-top: 7px;
@@ -549,9 +707,9 @@
         border-color: $color-white;
         border-bottom-color: transparent;
         border-radius: 3px 3px 0 0;
-        border-bottom-color: transparent;
 
         &::before {
+          opacity: 0;
           left: 0;
           width: 100%;
           height: 1px;
