--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -224,15 +224,34 @@ block content
           +col(12)
             +textarea(placeholder="Текстовое поле")
           +col(6)
-            +ui-description .checkradio
+            +ui-description .checkbox
             +inputbox()
-              +checkbox('ui-checkbox', 'test', 'true') Чекбокс
+              +checkbox('ui-checkbox', 'test', true) Чекбокс
+            +ui-description .checkbox._big
+            +inputbox()
+              +checkbox('ui-checkbox', 'test', true)._small Чекбокс маленький
+            +ui-description .checkbox._inverse
+            +inputbox()
+              +checkbox('ui-checkbox', 'test', true)._inverse Чекбокс обратный
+            +ui-description .checkbox:disabled или .checkbox.is-disabled
+            +inputbox()
+              +checkbox('ui-checkbox', 'test', true).is-disabled Чекбокс отключеный
           +col(6)
             +ui-description .checkradio
             +inputbox()
               +ui-elements-list
-                +radio('ui-radio', 'test', 'true') Радиокнопка
+                +radio('ui-radio', 'test', true) Радиокнопка
                 +radio('ui-radio', 'test-2') Радиокнопка
+            +ui-description .checkradio._nobox
+            +inputbox()
+              +ui-elements-list
+                +radio('ui-radio2', 'test', true)._nobox Радиокнопка
+                +radio('ui-radio2', 'test-2')._nobox Радиокнопка
+            +ui-description .checkradio:disabled или .checkradio.is-disabled
+            +inputbox()
+              +ui-elements-list
+                +radio('ui-radio2', 'test', true).is-disabled Радиокнопка
+                +radio('ui-radio2', 'test-2').is-disabled Радиокнопка
           +col(6)
             +ui-description .range.js-range<br> Все параметры задаются дата-атрибутами
             +inputbox()
@@ -348,11 +367,6 @@ block content
         +link-icon('refresh')(href="#") Ссылка с иконкой
         +ui-description .link.is-disabled
         +link()(href="#").is-disabled Отключенная ссылка
-        +ui-description .link.color
-        +link-top link yellow
-        +link-top._red link red
-        +link-top._blue link blue
-        +link-top._green link green
 
     //- Скроллбар
     +ui-section
@@ -421,8 +435,11 @@ block content
         h2 Карты
         p Блок: blocks/map/map
       +ui-section-content()
-        +ui-description #map
+        +ui-description .map#map
         +map()#map
+      +ui-section-content()
+        +ui-description .map._big#mapTwo
+        +map()._big#mapTwo
 
     //- Анимации
     +ui-section
@@ -657,6 +674,22 @@ block content
         h2 Маркеры помещений (цветные квадраты)
         p Блок: blocks/boxes
       +ui-section-content
+        +ui-description .box (по дефолту .box - бесцветный, поэтому для демонстраци окрашен)
+          +box._orange
+        +ui-description .box._small
+          +box._orange._small
+        +ui-description .box._smaller
+          +box._orange._smaller
+        +ui-description .box._big
+          +box._orange._big
+        +ui-description .box._orange
+          +box._orange
+        +ui-description .box._red
+          +box._red
+        +ui-description .box._blue
+          +box._blue
+        +ui-description .box._green
+          +box._green
         +ui-description .boxes
         +boxes
           +box._orange
@@ -665,10 +698,10 @@ block content
           +box._green
         +ui-description .boxes._big
         +boxes._big
-          +box._orange
-          +box._red
-          +box._blue
-          +box._green
+          +box._big._orange
+          +box._big._red
+          +box._big._blue
+          +box._big._green
 
     //- Button heart
     +ui-section
@@ -699,7 +732,7 @@ block content
           +col(3)
             +space(room)
 
-    //- Spaces
+    //- News
     - var news = {img: "assets/images/news1.jpg", date: "September 9", title: "The perfect Workplace Do&nbsp;exist.&nbsp;5&nbsp;simple steps to&nbsp;make the office of&nbsp;your drem.", info: "For many employers, career success is&nbsp;desired. Establishing a&nbsp;profitable company, we&rsquo;re looking for the best candidates only, whose knowledge and experience can help to&nbsp;achieve career goals."};
     +ui-section
       +ui-section-head
@@ -710,6 +743,17 @@ block content
         +grid
           +col(3)
             +news(news)
+
+    //- compact-form
+    +ui-section
+      +ui-section-head
+        h2 Filter for location on mobile
+        p Блок: blocks/compact-filter
+      +ui-section-content
+        +ui-description .compact-filter
+        +grid
+          +col(3)
+            +compact-filter
 
 
   script
