--- a/app/components/ui-kit/ui-kit.scss
+++ b/app/components/ui-kit/ui-kit.scss
@@ -1,5 +1,5 @@
 $ui-kit-color-gray: #ccc;
-$ui-kit-color-text: #222;
+$ui-kit-color-text: $color-basic;
 $ui-kit-color-darkbg: #111;
 
 .ui-kit {
@@ -91,7 +91,7 @@ $ui-kit-color-darkbg: #111;
   }
 
   &__description {
-    font-size: 13px;
+    font-size: 16px;
     line-height: 1.4;
 
     &:not(:first-child) {
@@ -169,8 +169,9 @@ $ui-kit-color-darkbg: #111;
       }
 
       p {
-        font-size: 16px;
-        line-height: 1.5;
+        font-size: 18px;
+        line-height: 26/18;
+        letter-spacing: -.02em;
 
         &:not(:last-child) {
           margin-bottom: 10px;
@@ -216,7 +217,7 @@ $ui-kit-color-darkbg: #111;
   &__color {
     text-align: center;
     line-height: 20px;
-    font-size: 14px;
+    font-size: 16px;
     padding: 10px;
     display: inline-block;
     vertical-align: top;
