--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -37,7 +37,7 @@ block content
             +section-title('h2') Locations
           +e.location-bottom
             +filter.hide-sm(data-slot-id="location-clear" data-slot-res="xl")
-            //- +compact-filter.hide-from-sm
+            +compact-filter.hide-from-sm
       +section-content
         +map()._big#mapTwo
   +section._sm-mg
