--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -96,6 +96,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text9 {
+  font-size: 9px;
+  line-height: (26/9);
+  letter-spacing: -.02em;
+}
+
 @mixin ls {
   letter-spacing: -.02em;
 }
