--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -64,6 +64,8 @@ $color-select-bg-light: #fbfbfb;
 $color-inner-border: #707272;
 $color-selected-dark: #131716;
 $color-form-border-dark: #232931;
+$color-form-border-light: #ecedee;
+$color-gray-light: #d1d2d3;
 
 // ##########
 // Transitions
